--- a/src/weather-panel.vcxproj.filters
+++ b/src/weather-panel.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="weather-panel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="weather-api.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="weather-panel.rc">
