--- a/src/weather-panel.vcxproj
+++ b/src/weather-panel.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="weather-api.h" />
     <ClInclude Include="weather-panel.h" />
   </ItemGroup>
   <ItemGroup>
