--- a/src/weather-panel.vcxproj.filters
+++ b/src/weather-panel.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="weather-panel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="weather-api.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="weather-panel.cpp">
