--- a/src/weather-panel.vcxproj
+++ b/src/weather-panel.vcxproj
@@ -138,6 +138,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="json.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="weather-api.h" />
@@ -145,7 +146,6 @@
     <ClInclude Include="widget.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="quicktype.cpp" />
     <ClCompile Include="weather-api.cpp" />
     <ClCompile Include="weather-panel.cpp" />
     <ClCompile Include="widget.cpp" />
