--- a/src/weather-panel.vcxproj.filters
+++ b/src/weather-panel.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="widget.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="json.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="weather-panel.cpp">
@@ -42,9 +45,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="widget.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="quicktype.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
